--- a/peerlock-server/pom.xml
+++ b/peerlock-server/pom.xml
@@ -49,6 +49,13 @@
             <artifactId>peerlock-common</artifactId>
             <version>peerlock_1</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>2.2.224</version>
+        </dependency>
+
     </dependencies>
 
     <build>
