--- a/peerlock-server/pom.xml
+++ b/peerlock-server/pom.xml
@@ -66,6 +66,11 @@
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
