--- a/peerlock-client/pom.xml
+++ b/peerlock-client/pom.xml
@@ -52,6 +52,11 @@
             <artifactId>peerlock-server</artifactId>
             <version>peerlock_1</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.17.1</version>
+        </dependency>
     </dependencies>
 
     <build>
